<resources>
    <string name="app_name">DeliveryMasterClientApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Food Menu</string>
    <string name="title_activity_splash">DM Client App</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="guest">I am Guest</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_sign_up">SignUp</string>PHONE NUMBER
    <string name="hintloginphonenumber">PHONE NUMBER</string>
    <string name="hintloginpassword">PASSWORD</string>
    <string name="forgetpassword">Forgot Password ?</string>
    <string name="newaccount">New Account! Sign Up</string>
    <string name="tv_Signup">Sign Up</string>
    <string name="signup_username">First Name</string>
    <string name="signup_mobnum">Last Name</string>
    <string name="signup_password">Phone Number</string>
    <string name="signup_re_password">Password</string>
    <string name="doyouforgetpassword">Forget Password ?</string>
    <string name="insertyourphone">Enter your Mobile Number To Reset Password By SMS</string>
    <string name="hintforgetpasswordtxtinput">Mobile No</string>
    <string name="securtycode">Security Code</string>
    <string name="plesechecyourmobile">Please Check Your Mobile For your Security Code SMS </string>
    <string name="entersecurtycode">Enter Security Code</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="newpassword">new Password</string>
    <string name="enteryournewpass">Enter Your New Password</string>
    <string name="newpasswordlabl">New Password</string>
    <string name="title_activity_guest_splash">GuestSplash</string>
    <string name="item1myaccount">My Account</string>
    <string name="item2foodm">Food Menu</string>
    <string name="item3currntorder">Current Order</string>
    <string name="item4pervorders">Previous Orders</string>
    <string name="item5settngs">Settings</string>
    <string name="item6info">Info</string>
    <string name="searchfrag">Search Result</string>
    <string name="langdroplangtitle">Language</string>
    <string name="droplistlang">English</string>
    <string name="droplistlang2">Arabic</string>
    <string name="dropprefs">Service Preference</string>
    <string name="photoload">Load Images</string>
    <string name="info_resname">Name Of Restaurant </string>
    <string name="info_resaddress">Head Address </string>
    <string name="info_restelephone">Telephone </string>
    <string name="info_resotime">Opening Time </string>
    <string name="info_resminimumm">Minimum Charge</string>
    <string name="ErrorDialog">Error Message</string>
    <string name="Dissmiss">Dismiss</string>
    <string name="RegSucusess">Registration Success</string>
    <string name="sysMsg">System Message</string>
    <string name="Responsenotsucusess">Response From Server not Success !!!</string>
    <string name="communicationerorr">Communication Error</string>
    <string name="connectionerorr">Connection Error</string>
    <string name="dontleavefildes">Please Fill Empty Fields !!</string>
    <string name="loadingdialog">Please Wait</string>
    <string name="Loading">Loading ... </string>
    <string name="Amount">Amount</string>
    <string name="Additions">Additions</string>
    <string name="pickupservice">Pick Up Service</string>
    <string name="LocationOnMap">Please Pick Your Location From Map</string>
    <string name="deliveryservice">Delivery Service</string>
    <string name="enterfulladdress">Enter Your Full Address :</string>
    <string name="dialogmessagedeleteconfirmation">Do You Want to Delete This Addition ??</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="emptyerorr">You Cant add this meal to Cart until Increment meal count , please select meal count !!</string>
    <string name="dismiss">Dismiss</string>
    <string name="deletemeal">Do You Want to Delete This Meal ??</string>
    <string name="customizations">Customizations</string>
    <string name="logindialogallert">please sign-in </string>
    <string name="emptycartdialog">Shopping Cart Is Empty ! Please Fill it </string>
    <string name="shoppingcartempty">Cart Empty ..</string>
    <string name="pleaseselectbranch">Please Select Branch : </string>
    <string name="nolocations">No Locations Registered to your Account</string>
    <string name="yourcoument">Please add your address details here !</string>
    <string name="streetaddress">Please Put Your Address Here !</string>
    <string name="selectassigenedlocation">Select From your Assigned Locations</string>
    <string name="timetv">Modefy PickUp Time : </string>
    <string name="confirmtxtcomment">Add Your Instructions !</string>
    <string name="confirmorder">The Order</string>
    <string name="mealname">Meal</string>
    <string name="mealcount">Count</string>
    <string name="mealtotlaprice">Total Price</string>
    <string name="toptitleconfirom">Order Confirmation</string>
    <string name="selecttime">Please select Time of Receipt !</string>
    <string name="confirmdone">: Order has been Confirmed</string>
    <string name="emptycurrent">No Current Orders</string>
    <string name="emptyprev">No Previous Orders</string>
    <string name="passworderorr">Password should be at least 6 characters !</string>
    <string name="gpson">Please enable your location service</string>
    <string name="gogps">Turn On</string>
    <string name="brunchesmap">Brunches Locations On Map :</string>
    <string name="gust">Guest</string>
    <string name="conf">Please Wait While Sending and Confirming your Order ...</string>
    <string name="login">Signing in please Wait .. </string>
    <string name="sinup">Creating Your New Account Please Wait .. </string>
    <string name="mealloding">Loading Meals .. </string>
    <string name="cordersload">Loading your Current Orders .. </string>
    <string name="pordersload">Loading your Previous Orders .. </string>
    <string name="sendordersucese">Your order has been sent successfully</string>
    <string name="totalpricecart">Total Price : </string>
    <string name="rs">SR</string>
    <string name="selectloc">Are you sure you wont select this brunch ?</string>
    <string name="selectaddres">Are you sure you wont select this Address ?</string>
    <string name="soon">Soon !</string>
    <string name="addressempty">Please do not let your address Empty !</string>

    <string name="addressorderdetails">Address : </string>
    <string name="ordernoorderdetails">Order No . </string>
    <string name="typeorderdetails">Type : </string>
    <string name="statusorderdetails">Status : </string>
    <string name="bruncheorderdetails">Brunch : </string>
    <string name="loginsucess">Login has been Successfully</string>
    <string name="addresssent">Your Address has been sent </string>
    <string name="cartcreation">Your Shopping cart has been created</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_customization">Customization</string>
    <string name="title_activity_pick_up_serv">Map</string>
    <string name="title_activity_dialog_login">DialogLogin</string>
    <string name="title_activity_goods">goods</string>
    <string name="search_hint" />
    <string name="title_activity_location_details">Map</string>
    <string name="title_activity_add_location">AddLocation</string>
    <string name="title_activity_current_order_details">CurrentOrderDetails</string>
    <string name="title_activity_previuos_order_details">PreviuosOrderDetails</string>
    <string name="timeerorr">Please select later Date !!</string>


</resources>
