<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layoutDirection="locale"
    android:layout_gravity="center">


    <group android:checkableBehavior="single"
        android:layout_gravity="end"
        android:gravity="end">
        <item
            android:id="@+id/nav_myaccout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item1myaccount"
            android:gravity="end"
            android:layout_gravity="end"/>
        <item
            android:id="@+id/nav_foodmun"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/item2foodm"
            android:gravity="end"
            android:layout_gravity="end"/>
        <item
            android:id="@+id/nav_corder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/item3currntorder"
            android:gravity="end"
            android:layout_gravity="end"/>
        <item
            android:id="@+id/nav_porder"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/item4pervorders"
            android:gravity="end"
            android:layout_gravity="end"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/item5settngs"
            android:gravity="end"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/item6info"
            android:gravity="end"
            android:layout_gravity="end"/>
    </group>



</menu>
