<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.appsmatic.com.deliverymasterclintapp.Screens.ForgetpasswordS1"
    android:background="@drawable/forgetpasswordbackg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgetpassword_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView3"
            android:text="@string/doyouforgetpassword"
            android:gravity="center"
            android:textColor="#ffa600"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/insertyourphone"
            android:id="@+id/textView4"
            android:gravity="center"
            android:textColor="#ffa600"
            android:textSize="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/forgetpassword_phone_input"
            android:hint="@string/hintforgetpasswordtxtinput"
            android:background="@drawable/inputfield"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgetpassword_cont_1"
            android:src="@drawable/continuebtnenglish"
            android:layout_marginTop="15dp" />

    </LinearLayout>
</LinearLayout>
