<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="app.appsmatic.com.deliverymasterclintapp.Activites.Customization"
    android:padding="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/containerbackg"
        android:padding="10dp">

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
            android:id="@+id/mealControl"
            android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Amount"
            android:id="@+id/textView9"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:id="@+id/dec"
                android:src="@drawable/down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/value_tv"
                android:gravity="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:id="@+id/inc"
                android:src="@drawable/up" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:src="@drawable/moneyicon"
                android:adjustViewBounds="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="50 SR"
                android:id="@+id/custome_price_tv"
                android:gravity="center"
                android:textSize="15dp"
                android:padding="4dp"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:id="@+id/customizatonsContaner"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/customizations"
                android:gravity="center"
                android:padding="5dp"
                android:typeface="serif"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/customizations_list" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:id="@+id/additionsContaner"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Additions"
                android:id="@+id/textView11"
                android:gravity="center"
                android:padding="5dp"
                android:typeface="serif"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addisions_list">

            </android.support.v7.widget.RecyclerView>



        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addcartbtn"
            android:src="@drawable/addbtnenglish"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</RelativeLayout>
